[package]
name = "koc_core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
image = "0.25.10"
lz4_flex = "0.13.0"
md-5 = "0.11.0"
qrcode = "0.14.1"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["stream"] }
rqrr = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["rt", "macros", "sync", "time", "io-util", "net", "rt-multi-thread", "signal"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
url = "2.5.8"

[[bin]]
name = "koc_batch"
path = "src/koc_batch.rs"

[[bin]]
name = "token_gen"
path = "src/token_gen.rs"

[[bin]]
name = "koc_cli"
path = "src/koc_cli.rs"

[[bin]]
name = "koc_proxy"
path = "src/koc_proxy.rs"
